--- a/app/views/tags/_modify_form.html.erb
+++ b/app/views/tags/_modify_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-md-12 col-md-offset-0">
-      <%= form_for(@web_resource, url: action, method: method, 
+      <%= form_for(@tag, url: action, method: method, 
         html: {class: "vertical-form"}) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
         
@@ -12,22 +12,14 @@
             value: @software.id %>
         <% end %>
 
-        <!-- URL -->
+        <!-- Tags -->
         <div class="form-group">
-          <label>URL</label><span class="required-input">*</span>
-          <%= f.text_field :url, 
+          <label>Tags</label><span class="required-input">*</span>
+          Separate tags with a comma
+          <%= f.text_field :text, 
             class: "form-control ignore unchanged",
-            placeholder: "e.g., http://nodexlgraphgallery.org" %>
+            placeholder: "e.g., social networking, graphs" %>
         </div>    
-
-        <!-- Description -->
-        <div class="form-group">
-          <label>Description</label><span class="required-input">*</span> 
-
-          <%= f.text_field :description, 
-            class: "form-control ignore unchanged", 
-            placeholder: "e.g., NodeXL Graph Gallery" %>    
-        </div>
 
         <%= f.submit "Save", id: "form-submit", class: "btn btn-primary" %>
 
