--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -1,17 +1,17 @@
 
 <% if print_header %>
-  <h3><span class="name"><%= web_resource.description %></span>
+  <h3><span class="name"><%= tag.text %></span>
 
     <% if can_edit? and defined? vertical %>
       <%= form_for(example, method: :delete,
-          url: vertical_web_resource_path(vertical, web_resource), 
+          url: vertical_tag_path(vertical, example), 
           html: {class: "inline"}) do |f| %>
         <button type="submit" class="btn btn-default btn-sm">
           <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
           Disassociate</button>
       <% end %>
       <%= form_for(example, method: :get,
-         url: edit_vertical_web_resource_path(vertical, web_resource),
+         url: edit_vertical_tag_path(vertical, tag),
          html: {class: "inline"}) do |f| %>
         <button type="submit" class="btn btn-default btn-sm">
           <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
@@ -21,14 +21,8 @@
   </h3>
 <% end %>
 
-
-<h4>URL</h4>
-<p>
-  <%= link_to web_resource.url, web_resource.url %>
-</p>
-
 <h4>Associated software</h4>
 <ul>
   <%= render partial: 'software/software_list_item', 
-    collection: web_resource.software, as: :software %>
+    collection: tag.software, as: :software %>
 </ul>
