--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="vertical-launcher">
 
 <%= link_to "Projects", "#", class: "vertical-launch" %>
-<%= link_to "Software", "#", class: "vertical-launch" %>
+<%= link_to "Software", software_index_path, class: "vertical-launch" %>
 <%= link_to "Datasets", "#", class: "vertical-launch" %>
 <%= link_to "Anayses", "#", class: "vertical-launch" %>
 
