Added dataset vertical.
Consolidated some of the resource code to make it easier to support
multiple verticals.

No tests yet!

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,7 +45,7 @@
                 <li class="divider"></li>
                 <li><%= link_to "Add software", new_software_path %></li>
                 <li><%= link_to "Add an analysis", '#' %></li>
-                <li><%= link_to "Add a dataset", '#' %></li>
+                <li><%= link_to "Add a dataset", new_dataset_path %></li>
                 <li><%= link_to "Add a project", '#' %></li>
               </ul>
             </li>
@@ -62,7 +62,7 @@
         <ul class="nav navbar-nav">
           <li><%= link_to "Software", software_index_path %></li>      
           <li><%= link_to "Analyses", "#" %></li>      
-          <li><%= link_to "Datasets", "#" %></li>      
+          <li><%= link_to "Datasets", datasets_path %></li>      
           <li><%= link_to "Projects", "#" %></li>      
 
           <li>
