--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <%= link_to "Projects", "#", class: "vertical-launch" %>
 <%= link_to "Software", software_index_path, class: "vertical-launch" %>
-<%= link_to "Datasets", "#", class: "vertical-launch" %>
+<%= link_to "Datasets", datasets_path, class: "vertical-launch" %>
 <%= link_to "Anayses", "#", class: "vertical-launch" %>
 
 
