Updated links on header and homepage to link to analyses. Made the ordering of verticals consistent.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="vertical-launcher">
 
 <%= link_to "Projects", "#", class: "vertical-launch" %>
+<%= link_to "Analyses", analyses_path, class: "vertical-launch" %>
 <%= link_to "Software", software_index_path, class: "vertical-launch" %>
 <%= link_to "Datasets", datasets_path, class: "vertical-launch" %>
-<%= link_to "Anayses", "#", class: "vertical-launch" %>
 
 
 
