Fixed a wrapping bug with the 'show' view for various verticals.

--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -77,7 +77,7 @@
 
     <%= render(partial: "examples/example", collection: @analysis.examples, 
       locals: {print_header: true, vertical: @analysis}) || 
-      "There are currently no examples associated with this analysis." %>
+      "<p>There are currently no examples associated with this analysis.</p>".html_safe %>
   </div>
 
 </div>
