--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -77,7 +77,7 @@
 
     <%= render(partial: "examples/example", collection: @dataset.examples, 
       locals: {print_header: true, vertical: @dataset}) || 
-      "There are currently no examples associated with this dataset." %>
+      "<p>There are currently no examples associated with this dataset.</p>".html_safe %>
   </div>
 
 </div>
