--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -77,7 +77,7 @@
 
     <%= render(partial: "examples/example", collection: @software.examples, 
       locals: {print_header: true, vertical: @software}) || 
-      "There are currently no examples associated with this software." %>
+      "<p>There are currently no examples associated with this software.</p>".html_safe %>
   </div>
 
 </div>
