--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="vertical-launcher">
 
-<%= link_to "Projects", "#", class: "vertical-launch" %>
+<%= link_to "Assignments", assignments_path, class: "vertical-launch" %>
 <%= link_to "Analyses", analyses_path, class: "vertical-launch" %>
 <%= link_to "Software", software_index_path, class: "vertical-launch" %>
 <%= link_to "Datasets", datasets_path, class: "vertical-launch" %>
