Added a connect_index action in the assignments controller.
Now assignments can be added to other assignments. Updated the show view
to include assignments linked to and from. No new tests added, but all tests
are passing.

--- a/app/views/assignments/_assignment_list_item.html.erb
+++ b/app/views/assignments/_assignment_list_item.html.erb
@@ -1,1 +1,2 @@
-<li><%= link_to assignment.name, assignment_path(assignment) %></li>
+<li><%= link_to assignment.name, assignment_path(assignment) %> 
+  <span class="snippet"><%= get_snippet(assignment.summary, 200)%></span></li>
