--- a/app/views/assignments/_assignment_index_item.html.erb
+++ b/app/views/assignments/_assignment_index_item.html.erb
@@ -4,7 +4,10 @@
     <%= form_for(assignment, 
         url: vertical_vertical_path(@vertical, assignment), 
         method: :post, html: {style: 'display: inline'}) do |f| %>
-      <% if @vertical.assignments_related_to.exists?(assignment.id) %>
+      <% if (@vertical.class == Assignment and 
+              @vertical.assignments_related_to.exists?(assignment.id)) or
+            (@vertical.class != Assignment and 
+              @vertical.assignments.exists?(assignment.id)) %>
         <button class="btn btn-sm btn-default" disabled="disabled">Already added</button>
       <% else %>
         <button class="btn btn-sm btn-default">Add</button>
