--- a/app/views/analyses/_analysis_list_item.html.erb
+++ b/app/views/analyses/_analysis_list_item.html.erb
@@ -1,1 +1,3 @@
-<li><%= link_to analysis.name, analysis_path(analysis) %></li>
+<li><span class="vertical-name"><%= link_to analysis.name, analysis_path(analysis) %></span>
+  <span class="snippet"> &ndash; <%= get_snippet(analysis.summary, 200)%></span>
+</li>
