--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -40,7 +40,7 @@
     <% end %>
     <ul>
       <%= render(partial: "tags/tag_list_item", 
-        collection: @dataset.tags, as: :tag,
+        collection: sort_by(@dataset.tags, :text), as: :tag,
         locals: {print_header: true, vertical: @dataset}) || 
         "There are currently no tags associated with this dataset." %>
     </ul>
@@ -58,7 +58,7 @@
     <% end %>
     <ul>
       <%= render(partial: "web_resources/web_resource_list_item", 
-        collection: @dataset.web_resources, as: :web_resource,
+        collection: sort_by(@dataset.web_resources, :title), as: :web_resource,
         locals: {print_header: true, vertical: @dataset}) || 
         "There are currently no web resources associated with this dataset." %>
     </ul>
@@ -73,7 +73,7 @@
     <% end %>
     <ul>
       <%= render(partial: "assignments/assignment_list_item", 
-        collection: @dataset.assignments, as: :assignment,
+        collection: sort_by_name(@dataset.assignments), as: :assignment,
         locals: {print_header: true, vertical: @dataset}) || 
         "This dataset does not link to any assignments." %>
     </ul>
@@ -91,7 +91,8 @@
       ></a>
     <% end %>
 
-    <%= render(partial: "examples/example", collection: @dataset.examples, 
+    <%= render(partial: "examples/example", 
+      collection: sort_by(@dataset.examples, :title), 
       locals: {print_header: true, vertical: @dataset}) || 
       "<p>There are currently no examples associated with this dataset.</p>".html_safe %>
   </div>
