--- a/app/views/assignments/_modify_form.html.erb
+++ b/app/views/assignments/_modify_form.html.erb
@@ -7,6 +7,11 @@
         html: {class: "vertical-form"}) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       
+      <% unless @vertical.nil? %>
+        <%= f.hidden_field @vertical_form_id, name: @vertical_form_id, 
+          value: @vertical.id %>
+      <% end %>
+
       <div class="form-group">
         <%= f.label :assignment_name %><span class="required-input">*</span> 
         (max 200 characters)
