All tests now passing.
The issues were actual errors, not that new partials were being used.

--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -66,7 +66,7 @@
   </div>
 
   <%= render(partial: "verticals_shared/related_vertical",
-    locals: {title: "Assignments", vertical_from: @analysis, 
+    locals: {title: "Assignments", vertical_from: @software, 
              vertical_to: Assignment.new}) %>
 
   <div class="examples">
