--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container resource-modification">
   <h1><%= yield :title %></h1>
   <p>
-  Choose an example to associated with 
+  Choose a tag to associated with 
   <%= link_to @vertical.name, get_vertical_path(@vertical) %>.
   </p>
 
