This is a in-progress commit; need to move work spaces.

--- a/app/views/assignment_results/_modify_form.html.erb
+++ b/app/views/assignment_results/_modify_form.html.erb
@@ -3,7 +3,7 @@
 
   <div class="row">
     <div class="col-md-12 col-md-offset-0">
-      <%= form_for(@web_resource, url: action, method: method, 
+      <%= form_for(@assignment_result, url: action, method: method, 
         html: {class: "vertical-form"}) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
         
