--- a/app/views/assignment_results/_assignment_result_list_item.html.erb
+++ b/app/views/assignment_results/_assignment_result_list_item.html.erb
@@ -1,20 +1,20 @@
 <li class="resource">
   <span class="name"><%=
-    "#{assignment_example.course_title} (#{assignment_example.instructor}, #{assignment_example.semester})"
+    "#{assignment_result.course_title} (#{assignment_result.instructor}, #{assignment_result.semester})"
   %></span>
 
-  (<%= link_to "details", assignment_example_path(assignment_example) %>)
+  (<%= link_to "details", assignment_result_path(assignment_result) %>)
 
   <% if can_edit? and defined? vertical %>
-    <%= form_for(assignment_example, method: :delete,
-        url: delete_assignment_example_path(assignment_example), 
+    <%= form_for(assignment_result, method: :delete,
+        url: delete_assignment_result_path(assignment_result), 
         html: {class: "inline"}) do |f| %>
       <button type="submit" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
         Delete</button>
     <% end %>
-    <%= form_for(assignment_example, method: :get,
-       url: edit_vertical_assignment_example_path(vertical, assignment_example),
+    <%= form_for(assignment_result, method: :get,
+       url: edit_assignment_assignment_result_path(assignment),
        html: {class: "inline"}) do |f| %>
       <button type="submit" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
