Fixed and manually tested the views for assignment results.
Integrated assignment results into the assignment show view.
All tests passing.

--- a/app/views/assignment_results/_modify_form.html.erb
+++ b/app/views/assignment_results/_modify_form.html.erb
@@ -70,7 +70,7 @@
         <div class="form-group">
           <label>Project length (weeks)</label><br/>
           How many weeks were students given to complete the assignment?
-          <%= f.text_field :semester, 
+          <%= f.text_field :project_length_weeks, 
             class: "form-control ignore unchanged",
             placeholder: "e.g., 3" %>
         </div>      
