--- a/app/views/assignment_results/_assignment_result_list_item.html.erb
+++ b/app/views/assignment_results/_assignment_result_list_item.html.erb
@@ -5,16 +5,16 @@
 
   (<%= link_to "details", assignment_result_path(assignment_result) %>)
 
-  <% if can_edit? and defined? vertical %>
+  <% if can_edit? %>
     <%= form_for(assignment_result, method: :delete,
-        url: delete_assignment_result_path(assignment_result), 
+        url: assignment_result_path(assignment_result), 
         html: {class: "inline"}) do |f| %>
       <button type="submit" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
         Delete</button>
     <% end %>
     <%= form_for(assignment_result, method: :get,
-       url: edit_assignment_assignment_result_path(assignment),
+       url: edit_assignment_result_path(assignment_result),
        html: {class: "inline"}) do |f| %>
       <button type="submit" class="btn btn-default btn-sm">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
