--- a/app/views/assignment_results/edit.html.erb
+++ b/app/views/assignment_results/edit.html.erb
@@ -1,3 +1,5 @@
-<% provide(:title, "Editing assignment result: #{@assignment_result.description}") %>
+<% provide(:title, "Editing assignment result: "+
+  "#{@assignment_result.course_title} (#{@assignment_result.instructor}, "+
+  "#{@assignment_result.semester})") %>
 <%= render template: 'assignment_results/_modify_form', 
   locals: {action: assignment_result_path(@assignment_result), method: :patch } %>
