--- a/app/views/assignment_results/new.html.erb
+++ b/app/views/assignment_results/new.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, "New assignment result") %>
 <%= render template: 'assignment_results/_modify_form', 
-  locals: {action: :assignment_result, method: :post} %>
+  locals: {action: assignment_assignment_results_path(@assignment), 
+    method: :post} %>
