Added integration tests for assignment results.
All tests passing.

--- a/app/views/assignment_results/_assignment_result.html.erb
+++ b/app/views/assignment_results/_assignment_result.html.erb
@@ -12,7 +12,7 @@
     </tr>
     <tr>
       <th>Course title</th>
-      <td class="course_name"><%= assignment_result.course_title %></td>
+      <td class="course_title"><%= assignment_result.course_title %></td>
     </tr>
     <tr>
       <th>Course prefix</th>
