--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -1,11 +1,17 @@
-Showing search results for <strong><%= @query %></strong>:
+<% provide(:title, "#{@query} -- #{@vertical} search results") %>
+<div class="container resource-modification">
+  <h1>Search results</h1>
+  <p>
+  Showing search results for <strong><%= @query %></strong> across 
+  <%= @vertical == 'all' ? @vertical : "all categories" %>.
+  Found <%= @search.total %> results in <%= @query_seconds.round(3) %> seconds.
+  </p>
 
-<p>
-Found <%= @search.total %> results in <%= @query_seconds.round(3) %> seconds.
-</p>
-
-<ul>
-  <% @search.each_hit_with_result do |hit, result| %>
-    <li>Score: <%= hit.score %>, Class: <%= hit.class_name %>, ID: <%= hit.primary_key %></li>
-  <% end %>
-</ul>
+  <ul class="serp">
+    <% @search.each_hit_with_result do |hit, result| %>
+      <% result_vertical = hit.class_name.downcase %>
+      <% result_vertical_dir = result_vertical.pluralize(2) %>
+      <li class="search-result"><%= render partial: "#{result_vertical_dir}/#{result_vertical}_search_result", 
+        locals: { result_vertical.to_sym => result, score: hit.score } %></li>
+    <% end %>
+  </ul>
