--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -66,9 +66,10 @@
           <li><%= link_to "Datasets", datasets_path %></li>      
 
           <li>
-            <form class="navbar-form">
+            <form class="navbar-form" action="/search/all">
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search">
+                <input type="text" class="form-control" placeholder="Search"
+                  name="q">
                 <div class="input-group-btn">
                   <button class="btn btn-default" type="submit">
                     <i class="glyphicon glyphicon-search"></i>
