Added search controller support for cursors and json output.

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -122,6 +122,16 @@
   }
   
 
-  
+  .infinite-scroll .message {
+    min-width: 20em;
+    width: 33%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #bbb;
+    text-align: center;
+    padding: .5em;
+    border-radius: 1em;
+    
+  }
 }
 
