Added support for field weighting in the search controller.

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -141,5 +141,11 @@
       margin-right: auto;
     }
   }
+  
+  .no-results {
+    margin-top: 2em;
+    font-size: 130%;
+    font-style: italic;    
+  }
 }
 
