--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -26,11 +26,21 @@
     </div>
   </form>
   
+
+  
+  <% if @search.results.size == 0 %>
+  
+  <p class="no-results">
+    Oh no! No results were found for your search. Please try a different query.
+  </p>
+  
+  <% else %>
+  
   <p>
   Showing search results for <strong><%= @query %></strong>.
   Found <%= @search.total %> results in <%= @query_seconds.round(3) %> seconds.
   </p>
-
+  
   <ul class="results">
     <%= render partial: 'result_set', locals: {search: @search} %>
   </ul>
@@ -41,17 +51,18 @@
     data-query="<%= @query %>">
     
     <div class="click-for-more-results">
-      <button class="btn btn-sm">Click to see more results</button>
+      <button class="btn btn-default-sm">Click to see more results</button>
     </div>
     <div class="message loading-more-results hidden">
       Loading more results...
     </div>
     <div class="message no-more-results 
       <%= @search.results.last_page? ? "" : "hidden" %>">
-      There are no more results.
+      There are no more results to load.
     </div>
     <div class="message error hidden">
       There was an error retrieving more results.
     </div>
   </div>
+  <% end %>
 </div>
