Added an interface for advanced search.
The same interface is used for the header as on the search page. The search
bar in the header is no longer exposed on the search page. On a SERP, clicking
on a vertical tab will send the original search request (as spelled out in
the URL) to the clicked vertical.

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -147,5 +147,16 @@
     font-size: 130%;
     font-style: italic;    
   }
+  
+  .advanced-search-summary {
+    margin-left: 2em;
+    margin-bottom: 1em;
+    border: 1px solid gray;
+    
+    th, td {
+      padding-left: .5em;
+      padding-right: .5em;
+    }
+  }
 }
 
