--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -65,19 +65,26 @@
           <li><%= link_to "Software", software_index_path %></li>      
           <li><%= link_to "Datasets", datasets_path %></li>      
 
-          <li>
-            <form class="navbar-form" action="/search/all">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search"
-                  name="q">
-                <div class="input-group-btn">
-                  <button class="btn btn-default" type="submit">
-                    <i class="glyphicon glyphicon-search"></i>
-                  </button>
-                 </div>
-              </div>
-            </form>
-          </li>
+          <% unless defined? @is_search_page %>
+            <li>
+              <form class="navbar-form" action="/search/all">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search"
+                    name="q">
+                  <div class="input-group-btn">
+                    <button class="btn btn-default" type="submit">
+                      <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                   </div>
+                </div><br/>
+               <a href="#" 
+                class="hide-advanced-search advanced-search-control hidden"
+                >Hide advanced search</a>
+               <a href="#" class="trigger-advanced-search advanced-search-control"
+                >Advanced search</a>
+              </form>
+            </li>
+          <% end %>
         </ul>
       </div>
 
@@ -86,3 +93,12 @@
 
   </div>
 </nav>
+<% unless defined? @is_search_page %>
+  <div class="advanced-search advanced-search-control container hidden">
+    <div class="row">
+      <div class="col-md-12 col-md-offset-0">
+        <%= render partial: 'search/advanced_search_box' %>
+      </div>
+    </div>
+  </div>
+<% end %>
