Fixed a bug with the title generated for the search page.

--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "#{@query}&mdash;#{@vertical} search results") %>
+<% provide(:title, "#{@query} - search results") %>
 <div class="container serp">
 
 
