Added ranks to search results; changed query weighting.

--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -110,7 +110,8 @@
   <div class="infinite-scroll" 
     data-next-page-cursor="<%= @search.results.next_page_cursor %>"
     data-vertical="<%= @vertical %>"
-    data-query="<%= @query %>">
+    data-query="<%= @query %>"
+    data-next-rank="<%= @rank %>" >
     
     <div class="click-for-more-results">
       <button class="btn btn-default-sm">Click to see more results</button>
