--- a/app/views/search/_result_set.html.erb
+++ b/app/views/search/_result_set.html.erb
@@ -1,7 +1,11 @@
 <%# Expects the local search (a Sunspot search object). %>
+<% @rank = @starting_rank %>
 <% search.each_hit_with_result do |hit, result| %>
   <% result_vertical = hit.class_name.downcase %>
   <% result_vertical_dir = result_vertical.pluralize(2) %>
-  <li class="search-result"><%= render partial: "#{result_vertical_dir}/#{result_vertical}_search_result", 
-    locals: { result_vertical.to_sym => result, score: hit.score } %></li>
+  <li class="search-result" data-rank="<%= @rank %>"
+    ><%= render partial: "#{result_vertical_dir}/#{result_vertical}_search_result", 
+    locals: { result_vertical.to_sym => result, score: hit.score,
+    rank: @rank } %></li>
+  <% @rank += 1 %>
 <% end %>
