--- a/app/views/software/_software_search_result.html.erb
+++ b/app/views/software/_software_search_result.html.erb
@@ -1,4 +1,4 @@
-<div data-assignment-id="<%= software.id %>" class="software vertical-result-data">
+<div data-software-id="<%= software.id %>" class="software vertical-result-data">
 
   <span class="name"><%= link_to software.name, software_path(software) %></span>
   <span class="snippet"><%= software.summary %></span>
