--- a/app/views/search/_advanced_search_box.html.erb
+++ b/app/views/search/_advanced_search_box.html.erb
@@ -100,11 +100,19 @@
   
   <h2>Which vertical do you want to search?</h2>
   <div class="form-group">
-    <input type="radio" name="vertical" value="all" checked/> All verticals<br/>
-    <input type="radio" name="vertical" value="assignments"/> Assignments<br/>
-    <input type="radio" name="vertical" value="analyses"/> Analyses<br/>
-    <input type="radio" name="vertical" value="software"/> Software<br/>
-    <input type="radio" name="vertical" value="datasets"/> Datasets<br/>
+    <input type="radio" name="vertical" value="all" 
+      <%= @vertical == 'all' ? 'checked="checked"' : '' %>/> All verticals<br/>
+    <input type="radio" name="vertical" value="assignments" 
+      <%= @vertical == 'assignments' ? 'checked="checked"' : '' %>/> 
+      Assignments<br/>
+    <input type="radio" name="vertical" value="analyses" 
+      <%= @vertical == 'analyses' ? 'checked="checked"' : '' %>/> 
+      Analyses<br/>
+    <input type="radio" name="vertical" value="software" 
+      <%= @vertical == 'software' ? 'checked="checked"' : '' %>/> 
+      Software<br/>
+    <input type="radio" name="vertical" value="datasets" 
+      <%= @vertical == 'datasets' ? 'checked="checked"' : '' %>/> Datasets<br/>
   </div>
   
   
