back buttons, add new buttons

--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -3,6 +3,8 @@
 
   <h1>Assignment</h1>
 
+  <button class="btn btn-sm btn-default"><%= link_to "Add an assignment", new_assignment_path %></button>
+
   <div id="assignment-entries">
     <%= render @assignments %>
   </div>
