--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -3,6 +3,8 @@
 
   <h1>Analysis</h1>
 
+  <button class="btn btn-sm btn-default"><%= link_to "Add an analysis", new_analysis_path %></button>
+
   <div id="analysis-entries">
     <%= render @analyses %>
   </div>
