--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
 
   <h1>Dataset</h1>
+  <button class="btn btn-sm btn-default"><%= link_to "Add a dataset", new_dataset_path %></button>
 
   <div id="dataset-entries">
     <%= render @datasets %>
