--- a/app/views/software/index.html.erb
+++ b/app/views/software/index.html.erb
@@ -2,6 +2,7 @@
 <div class="container">
 
   <h1>Software</h1>
+  <button class="btn btn-sm btn-default"><%= link_to "Add a software", new_software_path %></button>
 
   <div id="software-entries">
     <%= render @software %>
